Auto-wire MetadataNodeProcessors.